--- a/grasp/CMakeLists.txt
+++ b/grasp/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable (grasp main.cpp canAPI.cpp RockScissorsPaper.cpp)
+add_executable (grasp main.cpp canAPI.cpp RockScissorsPaper.cpp Step.cpp)
 target_link_libraries (grasp BHand pcanbasic pthread)
 #install (TARGETS grasp DESTINATION ${PROJECT_SOURCE_DIR}/bin)
 install (TARGETS grasp DESTINATION ${PROJECT_BINARY_DIR}/bin)
